chane Go1V start; fix mobile headline positioning

--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -2,107 +2,107 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-        gtag('config', 'UA-157606098-2');
-    </script>
+		gtag('config', 'UA-157606098-2');
+	</script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="trail, running, slovenija, sabotin, skabrijel, sveta gora">
-    <meta name="description" content="Tek treh vrhov | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-    <title>Tek treh vrhov | Contact Us</title>  
-    <!-- styles -->
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="keywords" content="trail, running, slovenija, sabotin, skabrijel, sveta gora">
+	<meta name="description"
+		content="Tek treh vrhov | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
+	<title>Tek treh vrhov | Contact Us</title>
+	<!-- styles -->
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <div id="navigation-bar">
-        <!--add home button on the left-->
-        <div class="home-container">
-            <a href="/en" id="logo">T3V</a>
-        </div>
-        <div class="menu-icon-container">
-            <button class="menu-icon" data-target="menu">
-                <i class="fas fa-bars" id="menu-button"></i>
-            </button>
-        </div>
+	<!--Navigation bar-->
+	<div id="navigation-bar">
+		<!--add home button on the left-->
+		<div class="home-container">
+			<a href="/en" id="logo">T3V</a>
+		</div>
+		<div class="menu-icon-container">
+			<button class="menu-icon" data-target="menu">
+				<i class="fas fa-bars" id="menu-button"></i>
+			</button>
+		</div>
 
 
-        <!--menu content-->
-        <div id="menu">
-            <a id="close-button">&times;</a>
+		<!--menu content-->
+		<div id="menu">
+			<a id="close-button">&times;</a>
 
-            <ul class="menu-content">
-                <li><a href="faq" class="menu-link">FAQ</a></li>
-                <li><a href="races" class="menu-link" id="races-button">Races</a></li>
-                <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-                        class="menu-link">Registration</a></li>
-                <li><a href="about" class="menu-link">About</a></li>
-                <li><a href="contact-us" class="menu-link">Contact</a></li>
-                <li><a href="/sl/kontakt" class="language-switch menu-link">SI <i
-                            class="fas fa-globe"></i></a></li>
-            </ul>
-        </div>
-    </div>
+			<ul class="menu-content">
+				<li><a href="faq" class="menu-link">FAQ</a></li>
+				<li><a href="races" class="menu-link" id="races-button">Races</a></li>
+				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+						class="menu-link">Registration</a></li>
+				<li><a href="about" class="menu-link">About</a></li>
+				<li><a href="contact-us" class="menu-link">Contact</a></li>
+				<li><a href="/sl/kontakt" class="language-switch menu-link">SI <i class="fas fa-globe"></i></a></li>
+			</ul>
+		</div>
+	</div>
 
-    <div class="flex-box">
-        <!--Header-->
-        <header>
-            <div class="showcase-image">
-                <img src="../assets/images/showcase-4.jpg" alt="Tek treh vrhov - contact us">
-                <div class="text-wrap grid">
-                    <span class="showcase-title content-wrap">
-                        Contact us
-                    </span>
-                </div>
-            </div>
-        </header>
-        <!--section-C-->
-        <section class="section-c grid flex-item">
-            <div class="content-wrap">
-                <p class="opening">We'd love to hear from you.</p>
-                <form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
-                    method="POST">
-                    <input type="text" name="name" id="name" placeholder="Full name" class="input-field">
-                    <input type="email" name="email" id="email" placeholder="Your e-mail" class="input-field">
-                    <input type="text" name="subject" id="subjcet" placeholder="Subject" class="input-field">
-                    <textarea name="message" id="message" rows=8 placeholder="Message" class="input-field"></textarea>
-                    <button type=submit id="submit-button">Send your message</button>
-                </form>
-            </div>
-        </section>
+	<div class="flex-box">
+		<!--Header-->
+		<header>
+			<div class="showcase-image">
+				<img src="../assets/images/showcase-4.jpg" alt="Tek treh vrhov - contact us">
+				<div class="text-wrap grid">
+					<span class="showcase-title content-wrap">
+						Contact us
+					</span>
+				</div>
+			</div>
+		</header>
+		<!--section-C-->
+		<section class="section-c grid flex-item">
+			<div class="content-wrap">
+				<p class="opening">We'd love to hear from you.</p>
+				<form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
+					method="POST">
+					<input type="text" name="name" id="name" placeholder="Full name" class="input-field">
+					<input type="email" name="email" id="email" placeholder="Your e-mail" class="input-field">
+					<input type="text" name="subject" id="subjcet" placeholder="Subject" class="input-field">
+					<textarea name="message" id="message" rows=8 placeholder="Message" class="input-field"></textarea>
+					<button type=submit id="submit-button">Send your message</button>
+				</form>
+			</div>
+		</section>
 
-        <!--Footer-->
-        <div class="icon-container">
-            <a href="https://www.instagram.com/go4trail/" class="icon" data-target="menu">
-                <i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-                <i class="fab fa-facebook-square"></i></a>
-        </div>
-        <footer id="main-footer" class="grid flex-footer">
-            <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-                    Winkler</a></div>
-        </footer>
-    </div>
+		<!--Footer-->
+		<div class="icon-container">
+			<a href="https://www.instagram.com/go4trail/" class="icon" data-target="menu">
+				<i class="fab fa-instagram"></i></a>
+			<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+				<i class="fab fa-facebook-square"></i></a>
+		</div>
+		<footer id="main-footer" class="grid flex-footer">
+			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+					Winkler</a></div>
+		</footer>
+	</div>
 
-    <!--scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/src/js/jquery.validate.js"></script>
-    <script type="text/javascript" src="/src/js/mainScript.js"></script>
-    <script type="text/javascript" src="/src/js/formValidation.js"></script>
+	<!--scripts-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/src/js/jquery.validate.js"></script>
+	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+	<script type="text/javascript" src="/src/js/formValidation.js"></script>
 
 </body>
 
