--- a/sl/proge/goriski-tek.html
+++ b/sl/proge/goriski-tek.html
@@ -2,143 +2,145 @@
 <html lang="sl">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-        gtag('config', 'UA-157606098-2');
-    </script>
+		gtag('config', 'UA-157606098-2');
+	</script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
-    <meta name="description" content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-    <title>Tek treh vrhov | Goriški tek</title>   
-    <!--styles-->
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
+	<meta name="description"
+		content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
+	<title>Tek treh vrhov | Goriški tek</title>
+	<!--styles-->
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <div id="navigation-bar">
-        <!--add home button on the left-->
-        <div class="home-container">
-            <a href="/" id="logo">T3V</a> </div>
-        <div class="menu-icon-container">
-            <button class="menu-icon" data-target="menu">
-                <i class="fas fa-bars" id="menu-button"></i>
-            </button>
-        </div>
+	<!--Navigation bar-->
+	<div id="navigation-bar">
+		<!--add home button on the left-->
+		<div class="home-container">
+			<a href="/" id="logo">T3V</a> </div>
+		<div class="menu-icon-container">
+			<button class="menu-icon" data-target="menu">
+				<i class="fas fa-bars" id="menu-button"></i>
+			</button>
+		</div>
 
 
-        <!--menu content-->
-        <div id="menu">
-            <a id="close-button">&times;</a>
-            <ul class="menu-content">
-                <li><a href="/sl/info" class="menu-link">Info</a></li>
-                <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-                        class="menu-link">Prijava</a></li>
-                <li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
-                <li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/races/gorica-run" class="language-switch menu-link">EN <i
-                            class="fas fa-globe"></i></a></li>
-            </ul>
-        </div>
-    </div>
+		<!--menu content-->
+		<div id="menu">
+			<a id="close-button">&times;</a>
+			<ul class="menu-content">
+				<li><a href="/sl/info" class="menu-link">Info</a></li>
+				<li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
+				<li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+						class="menu-link">Prijava</a></li>
+				<li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
+				<li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
+				<li><a href="/en/races/gorica-run" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
+				</li>
+			</ul>
+		</div>
+	</div>
 
-    <div class="flex-box">
-        <!--Header-->
-        <header>
-            <div class="showcase-image">
-                <img src="../../assets/images/race-1.jpg" alt="Tek treh vrhov - Goriški tek in hoja za upanje" class="image-top">
-                <div class="text-wrap grid">
-                    <span class="showcase-title content-wrap">
-                        8. Goriški tek in hoja za upanje
-                    </span>
-                </div>
-            </div>
-        </header>
-        <!--section-D-->
-        <section class="section-d grid flex-item">
-            <div class="content-wrap">
-                <p class="opening">Dobrodelni tek v sodelovanju z <a href="http://www.ko-rak.si/" target="_blank"
-                        rel="noopener noreferrer">društvom ko-Rak</a>, ki usklajuje interese ter oblikuje in predlaga
-                    programe za preventivno dejavnost na področju boja proti raku.</p>
+	<div class="flex-box">
+		<!--Header-->
+		<header>
+			<div class="showcase-image">
+				<img src="../../assets/images/race-1.jpg" alt="Tek treh vrhov - Goriški tek in hoja za upanje"
+					class="image-top">
+				<div class="text-wrap grid">
+					<span class="showcase-title content-wrap">
+						8. Goriški tek in hoja za upanje
+					</span>
+				</div>
+			</div>
+		</header>
+		<!--section-D-->
+		<section class="section-d grid flex-item">
+			<div class="content-wrap">
+				<p class="opening">Dobrodelni tek v sodelovanju z <a href="http://www.ko-rak.si/" target="_blank"
+						rel="noopener noreferrer">društvom ko-Rak</a>, ki usklajuje interese ter oblikuje in predlaga
+					programe za preventivno dejavnost na področju boja proti raku.</p>
 
-                <ul class="info-container">
-                    <li>Dolžina: <b>4 km, 10 km in 15</b></li>
-                    <li>Datum: <b>3. oktober 2020</b></li>
-                    <li>Start: <b>10.30</b>, <i>Bevkov trg Nova Gorica</i></li>
-                </ul>
+				<ul class="info-container">
+					<li>Dolžina: <b>4 km, 10 km in 15</b></li>
+					<li>Datum: <b>3. oktober 2020</b></li>
+					<li>Start: <b>10.30</b>, <i>Bevkov trg Nova Gorica</i></li>
+				</ul>
 
-                <h2>Cena</h2>
-                <ul class="price">
-                    <li>do 1. julija 2020: <b>8 €</b></li>
-                    <li>do dneva dogodka: <b>10 €</b></li>
-                    <li class="small-text">* Startnine gredo v celoti v dobrodelne namene.</li>
-                </ul>
+				<h2>Cena</h2>
+				<ul class="price">
+					<li>do 1. julija 2020: <b>8 €</b></li>
+					<li>do dneva dogodka: <b>10 €</b></li>
+					<li class="small-text">* Startnine gredo v celoti v dobrodelne namene.</li>
+				</ul>
 
-                <ul class="accordian top-padding">
-                    <li>
-                        <a class="toggle" href="javascript:void(0);">+ Opis proge</a>
-                        <ul class="inner  top-padding">
-                            <li>
-                                <p>Tek je ravninski po ulicah in obrobju Nove Gorice ter Šempetra.</p>
-                            </li>
-                        </ul>
-                    </li>
+				<ul class="accordian top-padding">
+					<li>
+						<a class="toggle" href="javascript:void(0);">+ Opis proge</a>
+						<ul class="inner  top-padding">
+							<li>
+								<p>Tek je ravninski po ulicah in obrobju Nove Gorice ter Šempetra.</p>
+							</li>
+						</ul>
+					</li>
 
-                    <li>
-                        <a class="toggle" href="javascript:void(0);">+ Kontakt</a>
-                        <ul class="inner  top-padding">
-                            <li>Javni zavod za šport Nova Gorica</li>
-                            <li>+386 (0)53302020</li>
-                            <li><a href="mailto:info@sz-ng.si">info@sz-ng.si</a></li>
-                        </ul>
-                    </li>
-                </ul>
+					<li>
+						<a class="toggle" href="javascript:void(0);">+ Kontakt</a>
+						<ul class="inner  top-padding">
+							<li>Javni zavod za šport Nova Gorica</li>
+							<li>+386 (0)53302020</li>
+							<li><a href="mailto:info@sz-ng.si">info@sz-ng.si</a></li>
+						</ul>
+					</li>
+				</ul>
 
-                <div class="center top-padding">
-                    <a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-                        class="btn">PRIJAVITE SE</a>
-                    <p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
-                    </p>
-                </div>
-            </div>
-        </section>
+				<div class="center top-padding">
+					<a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+						class="btn">PRIJAVITE SE</a>
+					<p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
+					</p>
+				</div>
+			</div>
+		</section>
 
-        <!--section-C-->
-        <section class="section-c grid">
-            <div class="content-wrap">
-                <div class="icon-container">
-                    <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-                        data-target="menu">
-                        <i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-                        <i class="fab fa-facebook-square"></i></a>
-                </div>
-            </div>
-        </section>
+		<!--section-C-->
+		<section class="section-c grid">
+			<div class="content-wrap">
+				<div class="icon-container">
+					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+						data-target="menu">
+						<i class="fab fa-instagram"></i></a>
+					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+						<i class="fab fa-facebook-square"></i></a>
+				</div>
+			</div>
+		</section>
 
-        <!--Footer-->
-        <footer id="main-footer" class="grid">
-            <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-                    Winkler</a></div>
-        </footer>
-    </div>
+		<!--Footer-->
+		<footer id="main-footer" class="grid">
+			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+					Winkler</a></div>
+		</footer>
+	</div>
 
-    <!--scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/src/js/mainScript.js"></script>
+	<!--scripts-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
 
 </html>
