--- a/sl/proge/index.html
+++ b/sl/proge/index.html
@@ -2,147 +2,147 @@
 <html lang="sl">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-        gtag('config', 'UA-157606098-2');
-    </script>
+		gtag('config', 'UA-157606098-2');
+	</script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
-    <meta name="description" content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-    <title>Tek treh vrhov | Proge</title>    
-    <!--styles-->
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
+	<meta name="description"
+		content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
+	<title>Tek treh vrhov | Proge</title>
+	<!--styles-->
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <div id="navigation-bar">
-        <!--add home button on the left-->
-        <div class="home-container">
-            <a href="/" id="logo">T3V</a>
-        </div>
-        <div class="menu-icon-container">
-            <button class="menu-icon" data-target="menu">
-                <i class="fas fa-bars" id="menu-button"></i>
-            </button>
-        </div>
+	<!--Navigation bar-->
+	<div id="navigation-bar">
+		<!--add home button on the left-->
+		<div class="home-container">
+			<a href="/" id="logo">T3V</a>
+		</div>
+		<div class="menu-icon-container">
+			<button class="menu-icon" data-target="menu">
+				<i class="fas fa-bars" id="menu-button"></i>
+			</button>
+		</div>
 
-        <!--menu content-->
-        <div id="menu">
-            <a id="close-button">&times;</a>
+		<!--menu content-->
+		<div id="menu">
+			<a id="close-button">&times;</a>
 
-            <ul class="menu-content">
-                <li><a href="/sl/info" class="menu-link">Info</a></li>
-                <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-                        class="menu-link">Prijava</a></li>
-                <li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
-                <li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/races" class="language-switch menu-link">EN <i
-                            class="fas fa-globe"></i></a>
-                </li>
-            </ul>
-        </div>
+			<ul class="menu-content">
+				<li><a href="/sl/info" class="menu-link">Info</a></li>
+				<li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
+				<li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+						class="menu-link">Prijava</a></li>
+				<li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
+				<li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
+				<li><a href="/en/races" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
+				</li>
+			</ul>
+		</div>
 
-    </div>
+	</div>
 
-    <div class="flex-box">
-        <!--Header-->
-        <header>
-            <div class="showcase-image">
-                <img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - proge" class="image-center">
-                <div class="text-wrap grid">
-                    <span class="showcase-title content-wrap">
-                        Proge
-                    </span>
-                </div>
-            </div>
-        </header>
-        <!--section-A-->
-        <section class="section-a flex-item">
+	<div class="flex-box">
+		<!--Header-->
+		<header>
+			<div class="showcase-image">
+				<img src="../../assets/images/showcase-11.jpg" alt="Tek treh vrhov - proge" class="image-center">
+				<div class="text-wrap grid">
+					<span class="showcase-title content-wrap">
+						Proge
+					</span>
+				</div>
+			</div>
+		</header>
+		<!--section-A-->
+		<section class="section-a flex-item">
 
-            <ul class="image-grid">
-                <li class="content-wrap">
-                    <p class="opening">
-                        Ste izkušen tekač, občasni rekreativec ali pa si samo želite novih
-                        doživetij? Za vsakega se nekaj najde. Poglejte si proge, ki smo jih pripravili za vas.
-                    </p>
-                </li>
-                <li id="race-1">
-                    <a href="./goriski-tek">
-                        <div class="card-content">
-                            <h1 class="card-title">Goriški tek</h1>
-                            <p> 4, 10 in 15 km |
-                                Dobrodelni tek
-                            </p>
-                        </div>
-                    </a>
-                </li>
-                <li id="race-2">
-                    <a href="./go1v-12km">
-                        <div class="card-content">
-                            <h1 class="card-title">Go1V</h1>
-                            <p> 12 km | 700 m
-                            </p>
-                        </div>
-                    </a>
-                </li>
-                <li id="race-3">
-                    <a href="./go3v-28km">
-                        <div class="card-content">
-                            <h1 class="card-title">Go3V</h1>
-                            <p> 28 km | 1675 m
-                            </p>
-                        </div>
-                    </a>
-                </li>
-                <li id="race-4">
-                    <a href="./ultra-58km">
-                        <div class="card-content">
-                            <h1 class="card-title">Počasna a drzna ultra</h1>
-                            <p> 58 km | 2864 m
-                            </p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </section>
+			<ul class="image-grid">
+				<li class="content-wrap">
+					<p class="opening">
+						Ste izkušen tekač, občasni rekreativec ali pa si samo želite novih
+						doživetij? Za vsakega se nekaj najde. Poglejte si proge, ki smo jih pripravili za vas.
+					</p>
+				</li>
+				<li id="race-1">
+					<a href="./goriski-tek">
+						<div class="card-content">
+							<h1 class="card-title">Goriški tek</h1>
+							<p> 4, 10 in 15 km |
+								Dobrodelni tek
+							</p>
+						</div>
+					</a>
+				</li>
+				<li id="race-2">
+					<a href="./go1v-12km">
+						<div class="card-content">
+							<h1 class="card-title">Go1V</h1>
+							<p> 12 km | 700 m
+							</p>
+						</div>
+					</a>
+				</li>
+				<li id="race-3">
+					<a href="./go3v-28km">
+						<div class="card-content">
+							<h1 class="card-title">Go3V</h1>
+							<p> 28 km | 1675 m
+							</p>
+						</div>
+					</a>
+				</li>
+				<li id="race-4">
+					<a href="./ultra-58km">
+						<div class="card-content">
+							<h1 class="card-title">Počasna a drzna ultra</h1>
+							<p> 58 km | 2864 m
+							</p>
+						</div>
+					</a>
+				</li>
+			</ul>
+		</section>
 
-        <!--section-C-->
-        <section class="section-c grid">
-            <div class="content-wrap">
-                <div class="icon-container">
-                    <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-                        data-target="menu">
-                        <i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-                        <i class="fab fa-facebook-square"></i></a>
-                </div>
-            </div>
-        </section>
+		<!--section-C-->
+		<section class="section-c grid">
+			<div class="content-wrap">
+				<div class="icon-container">
+					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+						data-target="menu">
+						<i class="fab fa-instagram"></i></a>
+					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+						<i class="fab fa-facebook-square"></i></a>
+				</div>
+			</div>
+		</section>
 
-        <!--Footer-->
-        <footer id="main-footer" class="grid">
-            <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-                    Winkler</a></div>
-        </footer>
-    </div>
+		<!--Footer-->
+		<footer id="main-footer" class="grid">
+			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+					Winkler</a></div>
+		</footer>
+	</div>
 
-    <!--scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/src/js/mainScript.js"></script>
+	<!--scripts-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
 
 </html>
