--- a/en/races/go1v-12km.html
+++ b/en/races/go1v-12km.html
@@ -2,174 +2,174 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-        gtag('config', 'UA-157606098-2');
-    </script>
+		gtag('config', 'UA-157606098-2');
+	</script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="trail, running, slovenija, sabotin, skabrijel, sveta gora">
-    <meta name="description" content="Tek treh vrhov | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
-    <title>Tek treh vrhov | Go1V 12km</title> 
-    <!--styles-->
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="keywords" content="trail, running, slovenija, sabotin, skabrijel, sveta gora">
+	<meta name="description"
+		content="Tek treh vrhov | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
+	<title>Tek treh vrhov | Go1V 12km</title>
+	<!--styles-->
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <div id="navigation-bar">
-        <!--add home button on the left-->
-        <div class="home-container">
-            <a href="/en" id="logo">T3V</a> </div>
-        <div class="menu-icon-container">
-            <button class="menu-icon" data-target="menu">
-                <i class="fas fa-bars" id="menu-button"></i>
-            </button>
-        </div>
+	<!--Navigation bar-->
+	<div id="navigation-bar">
+		<!--add home button on the left-->
+		<div class="home-container">
+			<a href="/en" id="logo">T3V</a> </div>
+		<div class="menu-icon-container">
+			<button class="menu-icon" data-target="menu">
+				<i class="fas fa-bars" id="menu-button"></i>
+			</button>
+		</div>
 
 
-        <!--menu content-->
-        <div id="menu">
-            <a id="close-button">&times;</a>
-            <ul class="menu-content">
-                <li><a href="/en/faq" class="menu-link">FAQ</a></li>
-                <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
-                <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-                        class="menu-link">Registration</a></li>
-                <li><a href="/en/about" class="menu-link">About</a></li>
-                <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-                <li><a href="/sl/proge/go1v-12km" class="language-switch menu-link">Sl <i
-                            class="fas fa-globe"></i></a>
-            </ul>
-        </div>
-    </div>
+		<!--menu content-->
+		<div id="menu">
+			<a id="close-button">&times;</a>
+			<ul class="menu-content">
+				<li><a href="/en/faq" class="menu-link">FAQ</a></li>
+				<li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
+				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+						class="menu-link">Registration</a></li>
+				<li><a href="/en/about" class="menu-link">About</a></li>
+				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
+				<li><a href="/sl/proge/go1v-12km" class="language-switch menu-link">Sl <i class="fas fa-globe"></i></a>
+			</ul>
+		</div>
+	</div>
 
-    <div class="flex-box">
-        <!--Header-->
-        <header>
-            <div class="showcase-image">
-                <img src="../../assets/images/showcase-7.jpg" alt="Tek treh vrhov - Go1V 12km" class="image-center">
-                <div class="text-wrap grid">
-                    <span class="showcase-title content-wrap">
-                        Go1V - 12 km
-                    </span>
-                </div>
-            </div>
-        </header>
-        <!--section-D-->
-        <section class="section-d grid flex-item">
-            <div class="content-wrap">
-                <p class="opening">This year Go1V takes you to the summit of Sveta Gora.</p>
-                <ul class="info-container">
-                    <li>Distance: <b>12 km</b></li>
-                    <li>Elevation: <b>700 m</b></li>
-                    <li>Refreshment stations: <b>3</b></li>
-                    <li>Date: <b>10th October 2020</b></li>
-                    <li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
-                </ul>
+	<div class="flex-box">
+		<!--Header-->
+		<header>
+			<div class="showcase-image">
+				<img src="../../assets/images/showcase-7.jpg" alt="Tek treh vrhov - Go1V 12km" class="image-center">
+				<div class="text-wrap grid">
+					<span class="showcase-title content-wrap">
+						Go1V - 12 km
+					</span>
+				</div>
+			</div>
+		</header>
+		<!--section-D-->
+		<section class="section-d grid flex-item">
+			<div class="content-wrap">
+				<p class="opening">This year Go1V takes you to the summit of Sveta Gora.</p>
+				<ul class="info-container">
+					<li>Distance: <b>12 km</b></li>
+					<li>Elevation: <b>700 m</b></li>
+					<li>Refreshment stations: <b>3</b></li>
+					<li>Date: <b>10th October 2020</b></li>
+					<li>Start: <b>9.30</b>, <i>Solkan Kayak Center</i></li>
+				</ul>
 
-                <p class="top-padding">
-                    Download <a href="/assets/gpx/Go1V_12km.gpx.zip">GPX 12 km</a>
-                </p>
+				<p class="top-padding">
+					Download <a href="/assets/gpx/Go1V_12km.gpx.zip">GPX 12 km</a>
+				</p>
 
-                <h2>Obligatory equipment</h2>
-                <ul class="equipment">
-                    <li>1. Race number (fully visible)</li>
-                    <li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-                    <li>3. Mobile phone (silent mode)</li>
-                    <li class="small-text">* Additional gear might be announced on our Facebook few days before the
-                        event.</li>
-                </ul>
+				<h2>Obligatory equipment</h2>
+				<ul class="equipment">
+					<li>1. Race number (fully visible)</li>
+					<li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
+					<li>3. Mobile phone (silent mode)</li>
+					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
+						event.</li>
+				</ul>
 
-                <h2>Entry fee</h2>
-                <ul class="price">
-                    <li>until 1st July 2020: <b>15 €</b></li>
-                    <li>until 30th September 2020: <b>20 €</b></li>
-                    <li>until the day of the event: <b>25 €</b></li>
-                    <li class="small-text">* If registrations are not filled up you can register on the day of the
-                        event. In this case we cannot guarantee you will receive a gift pack.</li>
-                </ul>
+				<h2>Entry fee</h2>
+				<ul class="price">
+					<li>until 1st July 2020: <b>15 €</b></li>
+					<li>until 30th September 2020: <b>20 €</b></li>
+					<li>until the day of the event: <b>25 €</b></li>
+					<li class="small-text">* If registrations are not filled up you can register on the day of the
+						event. In this case we cannot guarantee you will receive a gift pack.</li>
+				</ul>
 
-                <ul class="accordian top-padding">
-                    <li>
-                        <a class="toggle" href="javascript:void(0);">+ General conditions</a>
-                        <ul class="inner  top-padding">
-                            <li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
-                            <li>2. Tekači morajo vso pot biti na uradni progi. Odgovornost vsakega tekača je, da pozna
-                                potek proge in je seznanjen z uradnimi označbami (zemljevidi so dosegljivi na spletni
-                                strani). Udeleženci, ki se oddaljijo od uradne proge ali jo namerno krajšajo bodo
-                                avtomatično diskvalificirani.</li>
-                            <li>3. Na nekaterih delih trasa poteka po cestah na katerih morate upoštevati veljavne
-                                cestno prometne predpise in se obnašati kot predpisuje zakon za vse udeležence v
-                                prometu.</li>
-                            <li>4. Samo tekačem s startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
-                                Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
-                            <li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
-                                (Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
-                                approved by the IAAF Council in force from 1 January 2019))</li>
-                            <li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
-                                kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
-                                prostovoljci, ki bodo preverjali prisotnost udeležencev.</li>
-                            <li>7. Udeleženci morajo upoštevati osnovna načela obnašanja v naravi, ne smejo puščati
-                                odpadkov! Odpadke lahko odložijo na mestih, predvidenih za to. Udeleženec, ki tega
-                                pravila ne bo upošteval in ga kontrola pri tem opazi, bo avtomatsko diskvalificiran. Vsi
-                                energijski geli, tablice, čokoladice morajo biti označene s startno številko tekmovalca.
-                            </li>
-                            <li>8. Tekmovanje se izvede v vsakem vremenu. Izjema so samo situacije, ko je lahko ogrožena
-                                varnost udeležencev (izjemno neurje, naravna katastrofa…). V takem primeru o odpovedi
-                                odloča vrhovna sodniška komisija. </li>
-                            <li>9. Udeleženec se zaveda in se strinja, da je tovrstna aktivnost organizirana in vodena s
-                                strani organizatorja in je opredeljena kot "ekstremen šport" in je kot taka podvržena
-                                nevarnostim in tveganjem, z vključujočimi poškodbami in lahko s smrtjo udeležencev.</li>
-                            <li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
-                                sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
-                        </ul>
-                    </li>
-                </ul>
+				<ul class="accordian top-padding">
+					<li>
+						<a class="toggle" href="javascript:void(0);">+ General conditions</a>
+						<ul class="inner  top-padding">
+							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
+							<li>2. Tekači morajo vso pot biti na uradni progi. Odgovornost vsakega tekača je, da pozna
+								potek proge in je seznanjen z uradnimi označbami (zemljevidi so dosegljivi na spletni
+								strani). Udeleženci, ki se oddaljijo od uradne proge ali jo namerno krajšajo bodo
+								avtomatično diskvalificirani.</li>
+							<li>3. Na nekaterih delih trasa poteka po cestah na katerih morate upoštevati veljavne
+								cestno prometne predpise in se obnašati kot predpisuje zakon za vse udeležence v
+								prometu.</li>
+							<li>4. Samo tekačem s startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
+								Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
+							<li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
+								(Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule
+								approved by the IAAF Council in force from 1 January 2019))</li>
+							<li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
+								kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
+								prostovoljci, ki bodo preverjali prisotnost udeležencev.</li>
+							<li>7. Udeleženci morajo upoštevati osnovna načela obnašanja v naravi, ne smejo puščati
+								odpadkov! Odpadke lahko odložijo na mestih, predvidenih za to. Udeleženec, ki tega
+								pravila ne bo upošteval in ga kontrola pri tem opazi, bo avtomatsko diskvalificiran. Vsi
+								energijski geli, tablice, čokoladice morajo biti označene s startno številko tekmovalca.
+							</li>
+							<li>8. Tekmovanje se izvede v vsakem vremenu. Izjema so samo situacije, ko je lahko ogrožena
+								varnost udeležencev (izjemno neurje, naravna katastrofa…). V takem primeru o odpovedi
+								odloča vrhovna sodniška komisija. </li>
+							<li>9. Udeleženec se zaveda in se strinja, da je tovrstna aktivnost organizirana in vodena s
+								strani organizatorja in je opredeljena kot "ekstremen šport" in je kot taka podvržena
+								nevarnostim in tveganjem, z vključujočimi poškodbami in lahko s smrtjo udeležencev.</li>
+							<li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
+								sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
+						</ul>
+					</li>
+				</ul>
 
-                <div class="center top-padding">
-                    <a href="https://sportotime.com/eng/race/3578" target="_blank" rel="noopener noreferrer"
-                        class="btn">REGISTER NOW</a>
-                    <p class="top-padding">Or check out other <a href="/en/races">races</a>.
-                </div>
-            </div>
-        </section>
+				<div class="center top-padding">
+					<a href="https://sportotime.com/eng/race/3578" target="_blank" rel="noopener noreferrer"
+						class="btn">REGISTER NOW</a>
+					<p class="top-padding">Or check out other <a href="/en/races">races</a>.
+				</div>
+			</div>
+		</section>
 
-        <!--section-C-->
-        <section class="section-c" class="grid">
-            <div class="content-wrap">
-                <div class="icon-container">
-                    <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
-                        data-target="menu">
-                        <i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-                        <i class="fab fa-facebook-square"></i></a>
-                </div>
-            </div>
+		<!--section-C-->
+		<section class="section-c" class="grid">
+			<div class="content-wrap">
+				<div class="icon-container">
+					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
+						data-target="menu">
+						<i class="fab fa-instagram"></i></a>
+					<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+						<i class="fab fa-facebook-square"></i></a>
+				</div>
+			</div>
 
-        </section>
+		</section>
 
-        <!--Footer-->
-        <footer id="main-footer" class="grid">
-            <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-                    Winkler</a></div>
-        </footer>
-    </div>
+		<!--Footer-->
+		<footer id="main-footer" class="grid">
+			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+					Winkler</a></div>
+		</footer>
+	</div>
 
-    <!--scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/src/js/mainScript.js"></script>
+	<!--scripts-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/src/js/mainScript.js"></script>
 </body>
 
 </html>
