--- a/sl/kontakt.html
+++ b/sl/kontakt.html
@@ -2,106 +2,106 @@
 <html lang="sl">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157606098-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-        gtag('config', 'UA-157606098-2');
-    </script>
+		gtag('config', 'UA-157606098-2');
+	</script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
-    <meta name="description" content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-    <title>Tek treh vrhov | Kontakt</title>
-    <!-- styles -->
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
+	<meta name="description"
+		content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
+	<title>Tek treh vrhov | Kontakt</title>
+	<!-- styles -->
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <div id="navigation-bar">
-        <!--add home button on the left-->
-        <div class="home-container">
-            <a href="/" id="logo">T3V</a>
-        </div>
-        <div class="menu-icon-container">
-            <button class="menu-icon" data-target="menu">
-                <i class="fas fa-bars" id="menu-button"></i>
-            </button>
-        </div>
+	<!--Navigation bar-->
+	<div id="navigation-bar">
+		<!--add home button on the left-->
+		<div class="home-container">
+			<a href="/" id="logo">T3V</a>
+		</div>
+		<div class="menu-icon-container">
+			<button class="menu-icon" data-target="menu">
+				<i class="fas fa-bars" id="menu-button"></i>
+			</button>
+		</div>
 
 
-        <!--menu content-->
-        <div id="menu">
-            <a id="close-button">&times;</a>
+		<!--menu content-->
+		<div id="menu">
+			<a id="close-button">&times;</a>
 
-            <ul class="menu-content">
-                <li><a href="info" class="menu-link">Info</a></li>
-                <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
-                        class="menu-link">Prijava</a></li>
-                <li><a href="o-nas" class="menu-link">O nas</a></li>
-                <li><a href="kontakt" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/contact-us" class="language-switch menu-link">EN <i
-                            class="fas fa-globe"></i></a></li>
-            </ul>
-        </div>
-    </div>
+			<ul class="menu-content">
+				<li><a href="info" class="menu-link">Info</a></li>
+				<li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
+				<li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+						class="menu-link">Prijava</a></li>
+				<li><a href="o-nas" class="menu-link">O nas</a></li>
+				<li><a href="kontakt" class="menu-link">Kontakt</a></li>
+				<li><a href="/en/contact-us" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a></li>
+			</ul>
+		</div>
+	</div>
 
-    <div class="flex-box">
-        <!--Header-->
-        <header>
-            <div class="showcase-image">
-                <img src="../assets/images/showcase-4.jpg" alt="Tek treh vrhov - Kontakt">
-                <div class="text-wrap grid">
-                    <span class="showcase-title content-wrap">
-                        Kontakt
-                    </span>
-                </div>
-            </div>
-        </header>
-        <!--section-C-->
-        <section class="section-c grid flex-item">
-            <div class="content-wrap">
-                <p class="opening">Pišite nam in z veseljem vam bomo odgovorili.</p>
-                <form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
-                    method="POST">
-                    <input type="text" name="name" id="name" placeholder="Ime in priimek" class="input-field">
-                    <input type="email" name="email" id="email" placeholder="Vaš e-mail" class="input-field">
-                    <input type="text" name="subject" id="subjcet" placeholder="Zadeva" class="input-field">
-                    <textarea name="message" id="message" rows=8 placeholder="Sporočilo" class="input-field"></textarea>
-                    <button type=submit id="submit-button">Pošljite svoje sporočilo</button>
-                </form>
-            </div>
-        </section>
+	<div class="flex-box">
+		<!--Header-->
+		<header>
+			<div class="showcase-image">
+				<img src="../assets/images/showcase-4.jpg" alt="Tek treh vrhov - Kontakt">
+				<div class="text-wrap grid">
+					<span class="showcase-title content-wrap">
+						Kontakt
+					</span>
+				</div>
+			</div>
+		</header>
+		<!--section-C-->
+		<section class="section-c grid flex-item">
+			<div class="content-wrap">
+				<p class="opening">Pišite nam in z veseljem vam bomo odgovorili.</p>
+				<form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
+					method="POST">
+					<input type="text" name="name" id="name" placeholder="Ime in priimek" class="input-field">
+					<input type="email" name="email" id="email" placeholder="Vaš e-mail" class="input-field">
+					<input type="text" name="subject" id="subjcet" placeholder="Zadeva" class="input-field">
+					<textarea name="message" id="message" rows=8 placeholder="Sporočilo" class="input-field"></textarea>
+					<button type=submit id="submit-button">Pošljite svoje sporočilo</button>
+				</form>
+			</div>
+		</section>
 
-        <!--Footer-->
-        <div class="icon-container">
-            <a href="https://www.instagram.com/go4trail/" class="icon" data-target="menu">
-                <i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
-                <i class="fab fa-facebook-square"></i></a>
-        </div>
-        <footer id="main-footer" class="grid flex-footer">
-            <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
-                    Winkler</a></div>
-        </footer>
-    </div>
+		<!--Footer-->
+		<div class="icon-container">
+			<a href="https://www.instagram.com/go4trail/" class="icon" data-target="menu">
+				<i class="fab fa-instagram"></i></a>
+			<a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
+				<i class="fab fa-facebook-square"></i></a>
+		</div>
+		<footer id="main-footer" class="grid flex-footer">
+			<div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+					Winkler</a></div>
+		</footer>
+	</div>
 
-    <!--scripts-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/src/js/jquery.validate.js"></script>
-    <script type="text/javascript" src="/src/js/mainScript.js"></script>
-    <script type="text/javascript" src="/src/js/formValidation.js"></script>
+	<!--scripts-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/src/js/jquery.validate.js"></script>
+	<script type="text/javascript" src="/src/js/mainScript.js"></script>
+	<script type="text/javascript" src="/src/js/formValidation.js"></script>
 
 </body>
 
