modify meta tags and title

--- a/en/races/go3v-28km.html
+++ b/en/races/go3v-28km.html
@@ -15,9 +15,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, running, slovenija, sabotin, skabrijel, sveta gora">
+	<meta name="keywords" content="trail, running, treh, vrhov, slovenija, sabotin, skabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
+		content="Tek treh vrhov 2020 | 12km, 28km, 58km | trail running over three summits surrounding the valley of Soča river in the Western Slovenia, 10th October 2020">
 	<title>Tek treh vrhov | Go3V 28km</title>
 	<!--styles-->
 	<link rel="stylesheet" href="/styles/main.css">
