--- a/sl/proge/goriski-tek.html
+++ b/sl/proge/goriski-tek.html
@@ -15,9 +15,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
+	<meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
 	<meta name="description"
-		content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
+		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
 	<title>Tek treh vrhov | Goriški tek</title>
 	<!--styles-->
 	<link rel="stylesheet" href="/styles/main.css">
