add setsrc; display smaller images for mobile

--- a/en/about.html
+++ b/en/about.html
@@ -62,7 +62,12 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../assets/images/showcase-9.jpg" alt="Tek treh vrhov - about us">
+				<img src="../assets/images/showcase-9-m.jpg" 
+					srcset="../assets/images/showcase-9-m.jpg 650w,
+					../assets/images/showcase-9.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - About us"
+					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						About
