--- a/en/faq.html
+++ b/en/faq.html
@@ -61,7 +61,12 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../assets/images/showcase-3.jpg" alt="Tek treh vrhov - FAQ">
+				<img src="../assets/images/showcase-3-m.jpg" 
+					srcset="../assets/images/showcase-3-m.jpg 650w,
+					../assets/images/showcase-3.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - FAQ"
+					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						FAQ
