--- a/en/races/gorica-run.html
+++ b/en/races/gorica-run.html
@@ -61,7 +61,8 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../../assets/images/race-1.jpg" alt="Tek treh vrhov - Gorica Run and Walk for Hope"
+				<img src="../../assets/images/goriski-tek-m.jpg" 
+					alt="Tek treh vrhov - Gorica Run and Walk for Hope"
 					class="image-top">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
