--- a/sl/o-nas.html
+++ b/sl/o-nas.html
@@ -61,7 +61,12 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../assets/images/showcase-9.jpg" alt="Tek treh vrhov - O nas">
+				<img src="../assets/images/showcase-9-m.jpg" 
+					srcset="../assets/images/showcase-9-m.jpg 650w,
+					../assets/images/showcase-9.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - O nas"
+					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						O nas
@@ -73,8 +78,8 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="main-text">Tek treh vrhov (T3V) se je začel kot vse dobre strvari. Z ljudmi, ki jih je družila
-					skupna strast. Nas je združilo veselje do teka. Še posebej, ko nas pot vodi v hrib. Zato smo se
+				<p class="main-text">Tek treh vrhov (T3V) se je začel kot vse dobre strvari. Z ljudmi ki jih je družila
+					skupna strast. Nas je združilo veselje do teka. Še posebej ko nas pot vodi v hrib. Zato smo se
 					odločili, da vam ponudimo edinstveno tekaško izkušnjo. Proge smo postavili čez slikovit greben
 					Sabotina s pogledom na reko Sočo, skozi gozdne poti Škabrijela in kaverno na Sveti Gori. Želeli smo
 					zajeti vso raznolikost, ki nam jo ponuja domači teren. Prav zato smo tek speljali preko treh vrhov.
