--- a/sl/proge/go1v-12km.html
+++ b/sl/proge/go1v-12km.html
@@ -61,7 +61,12 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../../assets/images/showcase-7.jpg" alt="Tek treh vrhov - Go1V 12km" class="image-center">
+				<img src="../../assets/images/showcase-7-m.jpg" 
+				srcset="../../assets/images/showcase-7-m.jpg 650w,
+				../../assets/images/showcase-7.jpg 750w"
+				sizes="100vw"
+				alt="Tek treh vrhov - Go1V 12km"
+				class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Go1V - 12 km
