--- a/sl/proge/go3v-28km.html
+++ b/sl/proge/go3v-28km.html
@@ -59,7 +59,12 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../../assets/images/showcase-10.jpg" alt="Tek treh vrhov - Go3V 28km" class="image-center">
+				<img src="../../assets/images/showcase-10-m.jpg" 
+				srcset="../../assets/images/showcase-10-m.jpg 650w,
+				../../assets/images/showcase-10.jpg 750w"
+				sizes="100vw"
+				alt="Tek treh vrhov - Go3V 28km"
+				class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Go3V - 28 km
