--- a/sl/proge/goriski-tek.html
+++ b/sl/proge/goriski-tek.html
@@ -60,8 +60,9 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../../assets/images/race-1.jpg" alt="Tek treh vrhov - Goriški tek in hoja za upanje"
-					class="image-top">
+				<img src="../../assets/images/goriski-tek-m.jpg" 
+				alt="Tek treh vrhov - Goriški tek in hoja za upanje"
+				class="image-top">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						8. Goriški tek in hoja za upanje
