--- a/sl/proge/ultra-58km.html
+++ b/sl/proge/ultra-58km.html
@@ -61,8 +61,12 @@
         <!--Header-->
         <header>
             <div class="showcase-image">
-                <img src="../../assets/images/showcase-12.jpg" alt="Tek treh vrhov - Počasna a drzna ultra 58 km"
-                    class="image-center">
+				<img src="../../assets/images/showcase-12-m.jpg" 
+					srcset="../../assets/images/showcase-12-m.jpg 650w,
+					../../assets/images/showcase-12.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - Počasna a drzna ultra 58 km"
+					class="image-center">
                 <div class="text-wrap grid">
                     <span class="showcase-title content-wrap">
                         Počasna a drzna ultra - 58 km
