--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -62,7 +62,12 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../assets/images/showcase-4.jpg" alt="Tek treh vrhov - contact us">
+				<img src="../assets/images/showcase-4-m.jpg" 
+					srcset="../assets/images/showcase-4-m.jpg 650w,
+					../assets/images/showcase-4.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - Contact us"
+					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Contact us
