--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -60,7 +60,11 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../../assets/images/showcase-12.jpg" alt="Tek treh vrhov - Počasna a drzna Ultra 58km"
+				<img src="../../assets/images/showcase-12-m.jpg" 
+					srcset="../../assets/images/showcase-12-m.jpg 650w,
+					../../assets/images/showcase-12.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - Počasna a drzna ultra 58 km"
 					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
