--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 	<!--Header-->
 	<header id="showcase">
 		<div class="hero-image">
-			<img src="../assets/images/showcase-1.jpg" alt="Tek treh vrhov - hero image">
+			<img src="../assets/images/showcase-1-m.jpg" 
+				srcset="../assets/images/showcase-1-m.jpg 650w,
+				../assets/images/showcase-1.jpg 750w"
+				sizes="100vw"
+				alt="Tek treh vrhov - hero image">
 			<div class="text-wrap grid">
 				<span class="big-headline content-wrap">
 					Tek treh vrhov
