--- a/sl/kontakt.html
+++ b/sl/kontakt.html
@@ -61,7 +61,12 @@
 		<!--Header-->
 		<header>
 			<div class="showcase-image">
-				<img src="../assets/images/showcase-4.jpg" alt="Tek treh vrhov - Kontakt">
+				<img src="../assets/images/showcase-4-m.jpg" 
+					srcset="../assets/images/showcase-4-m.jpg 650w,
+					../assets/images/showcase-4.jpg 750w"
+					sizes="100vw"
+					alt="Tek treh vrhov - Kontakt"
+					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
 						Kontakt
